# AOC-2020

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day16/: mod.rs  parsing.rs  requirements.rs
src/day17/: dimension3.rs  dimension4.rs  mod.rs
src/day18/: mod.rs  parsing.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs  parsing.rs  validation.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs  parsing.rs
src/day8/: mod.rs
src/day9/: mod.rs
src/intcodent/: mod.rs
