[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
once_cell = "1.5.2"
regex = "1.4.2"
anyhow = "1.0.34"
multiset = "0.0.5"
itertools = "0.9.0"